wufoo form perfected

--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
                     </ul>
                 <p><span>How It Works</span><br>Customer must sign up for a Home Energy Assessment from an authorized Mass Save program vendor.* A Mass Save representative will assess your energy efficiency improvement needs and determine what improvemenets are eligible for financing. The representative will provide a HEAT Loan Intake Form, and all other applicable documentation.*</p><p id="last">For more information, call 508-678-7641, fill out the contact form or drop by one of our branches.</p>
             </section>
-            
-      
+            <div id="wufoo-r84f9i0942lt3">
+                <a href="https://intothewildmarketing.wufoo.com/forms/r84f9i0942lt3"></a>.
+            </div>
             <footer>
                 <div id="disclaimer">
                     <p>* Rhode Island Residents: RI HEAT Loan Programs are facilitated by RISE Engineering, 888-633-7947 (RI). All loans are subject to credit approval.</p>
@@ -58,7 +59,22 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
-
+        <script type="text/javascript">var r84f9i0942lt3;(function(d, t) {
+            var s = d.createElement(t), options = {
+                'userName':'intothewildmarketing', 
+                'formHash':'r84f9i0942lt3', 
+                'autoResize':true,
+                'height':'320',
+                'async':true,
+                'host':'wufoo.com',
+                'header':'show', 
+                'ssl':true};
+                s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'wufoo.com/scripts/embed/form.js';
+                s.onload = s.onreadystatechange = function() {
+                    var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+                    try { r84f9i0942lt3 = new WufooForm();r84f9i0942lt3.initialize(options);r84f9i0942lt3.display(); } catch (e) {}};
+                    var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+                })(document, 'script');</script>
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
