added/positioned images

--- a/index.html
+++ b/index.html
@@ -25,12 +25,16 @@
         <!-- Add your site or application content here -->
         
         <div class="container">
+            <!-- cover top -->
             <img id="baycoast_logo" src="img/baycoast_logo.png">
-            <div id="button">Get Your 0% APR Loan!</div>
+            <a href="#wufoo-r84f9i0942lt3"><div id="button">Get Your 0% APR Loan!</div></a>
             <hr>
             <header>
                 <h1>Heating My Home For Less Of My Money.</h1>
             </header>
+            <!-- top -->
+
+            <!-- left side -->
             <section>
                 <p>BayCoast Bank has partnered with Mass Save to offer interest free heat loans to home owners in Massachusetts and Rhode Island.* Find out exactly what your home needs to be more comfortable and energy efficient with a thorough no-cost home energy assessment. Upgrades made today could save you money for years to come.<br><br>Eligible energy-efficiency improvements can include weatherizatio, hot water and heating system upgrades, replacement windows and more.<br><br><span>Program Specifics</span><br>The loans are available up to $25,000 (depending on utiliy & lender) with terms up to 7 years. To qualify for the loan, the customer must own a one-to-four-family residence, obtain a Mass Save Home Energy Assessment, and install qualified energy efficiency measure recommended by a Mass Save representative. These include:</p>
                     <ul id="prog-spec">
@@ -45,15 +49,27 @@
                     </ul>
                 <p><span>How It Works</span><br>Customer must sign up for a Home Energy Assessment from an authorized Mass Save program vendor.* A Mass Save representative will assess your energy efficiency improvement needs and determine what improvemenets are eligible for financing. The representative will provide a HEAT Loan Intake Form, and all other applicable documentation.*</p><p id="last">For more information, call 508-678-7641, fill out the contact form or drop by one of our branches.</p>
             </section>
+            <!-- left side -->
+
+            <!-- right side -->
+            <ul id="image-spread">
+                <li><img id="socks" src="img/socks.jpg"></li>
+                <li><img id="costs" src="img/costs.jpg"></li>
+                <li><img id="thermostat" src="img/thermostat.jpg"></li>
+            </ul>
             <div id="wufoo-r84f9i0942lt3">
                 <a href="https://intothewildmarketing.wufoo.com/forms/r84f9i0942lt3"></a>.
             </div>
+            <!-- right side -->
+
+            <!-- cover bottom -->
             <footer>
                 <div id="disclaimer">
                     <p>* Rhode Island Residents: RI HEAT Loan Programs are facilitated by RISE Engineering, 888-633-7947 (RI). All loans are subject to credit approval.</p>
                 </div>
                 <img id="mass_save_logo" src="img/mass_save_logo.png">
             </footer>
+            <!-- cover bottom -->
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
