--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <!-- left side -->
             <section>
-                <p>BayCoast Bank has partnered with Mass Save to offer interest free heat loans to home owners in Massachusetts and Rhode Island.* Find out exactly what your home needs to be more comfortable and energy efficient with a thorough no-cost home energy assessment. Upgrades made today could save you money for years to come.<br><br>Eligible energy-efficiency improvements can include weatherizatio, hot water and heating system upgrades, replacement windows and more.<br><br><span>Program Specifics</span><br>The loans are available up to $25,000 (depending on utiliy & lender) with terms up to 7 years. To qualify for the loan, the customer must own a one-to-four-family residence, obtain a Mass Save Home Energy Assessment, and install qualified energy efficiency measure recommended by a Mass Save representative. These include:</p>
+                <p>BayCoast Bank has partnered with Mass Save&reg; to offer interest free heat loans to home owners in Massachusetts and Rhode Island.* Find out exactly what your home needs to be more comfortable and energy efficient with a thorough no-cost home energy assessment. Upgrades made today could save you money for years to come.<br><br>Eligible energy-efficiency improvements can include weatherization, hot water and heating system upgrades, replacement windows and more.<br><br><span>Program Specifics</span><br>The loans are available up to $25,000 (depending on utiliy & lender) with terms up to 7 years. To qualify for the loan, the customer must own a one-to-four-family residence, obtain a Mass Save Home Energy Assessment, and install qualified energy efficiency measures recommended by a Mass Save representative. These include:</p>
                     <ul id="prog-spec">
                         <li>Attic, Wall, and Basement Insulation</li>
                         <li>High Efficiency Heating Systems</li>
@@ -47,7 +47,7 @@
                         <li>7-Day Digital & Wi Fi Thermostats</li>
                         <li>ENERGY STAR Qualified Replacement Windows</li>
                     </ul>
-                <p><span>How It Works</span><br>Customer must sign up for a Home Energy Assessment from an authorized Mass Save program vendor.* A Mass Save representative will assess your energy efficiency improvement needs and determine what improvemenets are eligible for financing. The representative will provide a HEAT Loan Intake Form, and all other applicable documentation.*</p><p id="last">For more information, call 508-678-7641, fill out the contact form or drop by one of our branches.</p>
+                <p><span>How It Works</span><br>Customer must sign up for a Home Energy Assessment from an authorized Mass Save program vendor.* A Mass Save representative will assess your energy efficiency improvement needs and determine what improvements are eligible for financing. The representative will provide a HEAT Loan Intake Form, and all other applicable documentation.*</p><p id="last">For more information, call 508-678-7641, fill out the contact form or drop by one of our branches.</p>
             </section>
             <!-- left side -->
 
