--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
-    <body>
+    <body onload="scrollTo(0,0)">
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -52,13 +52,13 @@
             <!-- left side -->
 
             <!-- right side -->
-            <ul id="image-spread">
+            <a href="thank-you.html"><ul id="image-spread">
                 <li><img id="socks" src="img/socks.jpg"></li>
                 <li><img id="costs" src="img/costs.jpg"></li>
                 <li><img id="thermostat" src="img/thermostat.jpg"></li>
-            </ul>
+            </ul></a>
             <div id="wufoo-r84f9i0942lt3">
-                <a href="https://intothewildmarketing.wufoo.com/forms/r84f9i0942lt3"></a>.
+                <a href="https://intothewildmarketing.wufoo.com/forms/r84f9i0942lt3"></a>
             </div>
             <!-- right side -->
 
