--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <div class="container">
             <!-- cover top -->
             <img id="baycoast_logo" src="img/baycoast_logo.png">
-            <a href="#wufoo-r84f9i0942lt3"><div id="button">Get Your 0% APR Loan!</div></a>
+            <a href="#wufoo-r84f9i0942lt3"><div id="button">Get Your Interest Free Loan.</div></a>
             <hr>
             <header>
                 <h1>Heating My Home For Less Of My Money.</h1>
-                <h2>Increase Your Energy Efficiency With A 0% APR Loan!</h2>
+                <h2>Increase Your Energy Efficiency with An Interest Free Loan!</h2>
             </header>
             <!-- top -->
 
